Added missing links

--- a/concepts/product/metrics/contextual-precision.mdx
+++ b/concepts/product/metrics/contextual-precision.mdx
@@ -3,7 +3,7 @@ title: "Contextual Precision"
 description: "Evaluates whether relevant documents in the retrieval context are ranked higher than irrelevant ones."
 ---
 
-The **Contextual Precision** metric assesses how well your RAG pipeline’s retriever prioritizes relevant content. Specifically, it checks whether relevant items in the `retrieval_context` are ranked higher than irrelevant ones, based on their contribution to answering the user’s query.
+The **Contextual Precision** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to assess how well your RAG pipeline’s retriever prioritizes relevant content. Specifically, it checks whether relevant items in the `retrieval_context` are ranked higher than irrelevant ones, based on their contribution to answering the user’s query.
 
 High contextual precision means that the retriever is efficiently surfacing the most useful information near the top.
 
