--- a/concepts/product/metrics/contextual-relevancy.mdx
+++ b/concepts/product/metrics/contextual-relevancy.mdx
@@ -3,7 +3,7 @@ title: "Contextual Relevancy"
 description: "Measures the quality of your RAG pipeline's retriever by evaluating the overall relevance of the information presented in your retrieval_context for a given input."
 ---
 
-The **Contextual Relevancy** metric is one of several [Metric Types](/concepts/metric-type) Galtea uses to evaluate the performance of your AI products, specifically for Retrieval-Augmented Generation (RAG) systems. It assesses whether the retrieved context is pertinent to the user's query.
+The **Contextual Relevancy** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate the performance of your AI products, specifically for Retrieval-Augmented Generation (RAG) systems. It assesses whether the retrieved context is pertinent to the user's query.
 
 This metric helps ensure that the information provided to the generator component of your RAG pipeline is useful and on-topic, which is crucial for generating high-quality, relevant answers.
 
