--- a/concepts/product/metrics/conversational-relevancy.mdx
+++ b/concepts/product/metrics/conversational-relevancy.mdx
@@ -3,7 +3,7 @@ title: "Conversation Relevancy"
 description: "Checks if your product consistently responds in a contextually relevant way during a multi-turn conversation."
 ---
 
-The **Conversation Relevancy** metric evaluates your LLM-based chatbot’s ability to generate contextually appropriate and relevant responses across the course of a multi-turn dialogue. It assesses whether each response aligns with the user’s intent, prior inputs, and the evolving context of the conversation.
+The **Conversation Relevancy** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate your LLM-based chatbot’s ability to generate contextually appropriate and relevant responses across the course of a multi-turn dialogue. It assesses whether each response aligns with the user’s intent, prior inputs, and the evolving context of the conversation.
 
 This metric is particularly useful for ensuring coherent, on-topic conversations that maintain engagement and avoid misunderstandings or irrelevant diversions.
 
