--- a/concepts/product/metrics/faithfulness.mdx
+++ b/concepts/product/metrics/faithfulness.mdx
@@ -3,7 +3,7 @@ title: "Faithfulness"
 description: "Evaluates whether the generated output aligns with the retrieved context in a RAG pipeline."
 ---
 
-The **Faithfulness** metric evaluates the factual alignment between the model's generated response (`actual_output`) and the information found in the `retrieval_context`. It is a core indicator of hallucination risk in retrieval-augmented generation systems.
+The **Faithfulness** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate the factual alignment between the model's generated response (`actual_output`) and the information found in the `retrieval_context`. It is a core indicator of hallucination risk in retrieval-augmented generation systems.
 
 A high faithfulness score indicates that the model grounds its answer in retrieved content, rather than introducing unsupported or fabricated information.
 
