--- a/concepts/product/metrics/unbiased.mdx
+++ b/concepts/product/metrics/unbiased.mdx
@@ -3,7 +3,7 @@ title: "Unbiased"
 description: "Evaluates whether your product’s output contains or reinforces harmful bias based on gender, race, or political orientation."
 ---
 
-The **Unbiased** metric assesses whether the outputs of your LLM-based product are free from harmful or unjustified bias. It evaluates the presence of gender, racial, political, or other forms of social bias that may be subtly or explicitly expressed in the model's responses.
+The **Unbiased** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to assess whether the outputs of your LLM-based product are free from harmful or unjustified bias. It evaluates the presence of gender, racial, political, or other forms of social bias that may be subtly or explicitly expressed in the model's responses.
 
 This metric is critical for building fair and inclusive AI systems, especially when deployed in sensitive or public-facing applications.
 
