--- a/concepts/product/metrics/conversational-completeness.mdx
+++ b/concepts/product/metrics/conversational-completeness.mdx
@@ -5,7 +5,7 @@ description: "Evaluates whether your chatbot can guide a user to successfully co
 
 ## Conversation Completeness
 
-The **Conversation Completeness** metric measures the ability of your LLM-based chatbot to guide a user through an end-to-end conversation that successfully satisfies their initial request or goal. It evaluates whether the dialogue includes all necessary steps and logical transitions needed to fulfill the user’s intent.
+The **Conversation Completeness** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to measure the ability of your LLM-based chatbot to guide a user through an end-to-end conversation that successfully satisfies their initial request or goal. It evaluates whether the dialogue includes all necessary steps and logical transitions needed to fulfill the user’s intent.
 
 This metric is especially relevant for transactional or task-based agents (e.g., booking systems, support bots).
 
