Added links to relevant documentation

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -44,7 +44,7 @@ You can interact with Galtea through multiple channels:
   <Card title="Web Platform" icon="globe" href="https://platform.galtea.ai/">
     Manage your products and access insights via the dashboard.
   </Card>
-  <Card title="Python SDK" icon="python" href="/sdk">
+  <Card title="Python SDK" icon="python" href="/sdk/introduction">
     Seamlessly integrate our services using the Python SDK.
   </Card>
   <Card title="GitHub Actions" icon="github" href="/sdk/integrations/github-actions">
