--- a/sdk/api/evaluation-task/create-from-production.mdx
+++ b/sdk/api/evaluation-task/create-from-production.mdx
@@ -7,7 +7,7 @@ Galtea SDK also supports creating evaluation tasks directly from your production
 This is useful for ongoing monitoring and analysis of real user interactions even using past interactions.
 
 ## Returns
-Returns a list of EvaluationTask objects for the given version and user input.
+Returns a list of [EvaluationTask](/concepts/product/evaluation/task) objects for the given version and user input.
 
 ## Example
 ```python
