--- a/sdk/api/evaluation-task/create.mdx
+++ b/sdk/api/evaluation-task/create.mdx
@@ -4,7 +4,7 @@ description: "Create an evaluation task for a given evaluation."
 ---
 
 ## Returns
-Returns a list of EvaluationTask objects for the given evaluation and test case. Returns `None` if an error occurs.
+Returns a list of [EvaluationTask](/concepts/product/evaluation/task) objects for the given evaluation and test case. Returns `None` if an error occurs.
 
 ## Example
 ```python
