--- a/sdk/api/evaluation-task/list.mdx
+++ b/sdk/api/evaluation-task/list.mdx
@@ -4,7 +4,7 @@ description: "List all evaluation tasks associated with a specific evaluation."
 ---
 
 ## Returns
-Returns a list of EvaluationTask objects for the given evaluation.
+Returns a list of [EvaluationTask](/concepts/product/evaluation/task) objects for the given evaluation.
 
 ## Example
 ```python
