--- a/sdk/api/evaluation/service.mdx
+++ b/sdk/api/evaluation/service.mdx
@@ -3,6 +3,8 @@ title: 'Evaluation Service'
 description: "Evaluation Service API methods in the Galtea SDK"
 ---
 
+import EvaluationCard from '/snippets/cards/evaluation-card.mdx';
+
 The Evaluation Service in the Galtea SDK allows you to manage [evaluations](/concepts/product/evaluation) for assessing your products.
 This Service is exposed by the `galtea.evaluations` object.
 
@@ -15,3 +17,7 @@ This Service is exposed by the `galtea.evaluations` object.
 - [Listing Evaluations](/sdk/api/evaluation/list)
 - [Retrieving Evaluation](/sdk/api/evaluation/get)
 - [Deleting Evaluation](/sdk/api/evaluation/delete)
+
+## Related Concepts
+
+<EvaluationCard />
