--- a/sdk/api/metrics/service.mdx
+++ b/sdk/api/metrics/service.mdx
@@ -3,6 +3,8 @@ title: 'Metrics Service'
 description: "Metrics Service API methods in the Galtea SDK"
 ---
 
+import MetricTypeCard from '/snippets/cards/metric-type-card.mdx';
+
 The Metrics Service in the Galtea SDK allows you to manage [metric types](/concepts/metric-type) for evaluating your products.
 This Service is exposed by the `galtea.metrics` object.
 
@@ -16,3 +18,7 @@ This Service is exposed by the `galtea.metrics` object.
 - [Retrieving Metric](/sdk/api/metrics/get)
 - [Retrieving Metric By Name](/sdk/api/metrics/get-by-name)
 - [Deleting Metric](/sdk/api/metrics/delete)
+
+## Related Concepts
+
+<MetricTypeCard />
