--- a/sdk/api/product/get-by-name.mdx
+++ b/sdk/api/product/get-by-name.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific product by its name."
 ---
 
 ## Returns
-Returns a Product object for the given product name.
+Returns a [Product](/concepts/product) object for the given product name.
 
 ## Example
 ```python
