--- a/sdk/api/product/get.mdx
+++ b/sdk/api/product/get.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific product by its ID."
 ---
 
 ## Returns
-Returns a Product object for the given product ID.
+Returns a [Product](/concepts/product) object for the given product ID.
 
 ## Example
 ```python
