--- a/sdk/api/product/list.mdx
+++ b/sdk/api/product/list.mdx
@@ -4,7 +4,7 @@ description: "This method allows you to list many products."
 ---
 
 ## Returns
-It returns a list of Product objects that you have created in the [Galtea dashboard](https://platform.galtea.ai/). 
+It returns a list of [Product](/concepts/product) objects that you have created in the [Galtea dashboard](https://platform.galtea.ai/). 
 
 ## Example
 ```python
