--- a/sdk/api/product/service.mdx
+++ b/sdk/api/product/service.mdx
@@ -3,6 +3,8 @@ title: 'Product Service'
 description: "Product Service API methods in the Galtea SDK"
 ---
 
+import ProductCard from '/snippets/cards/product-card.mdx';
+
 The Product Service in the Galtea SDK allows you to manage [products](/concepts/product) that you want to evaluate.
 This Service is exposed by the `galtea.products` object.
 
@@ -19,3 +21,7 @@ This Service is exposed by the `galtea.products` object.
 - [Retrieving Product](/sdk/api/product/get)
 - [Retrieving Product By Name](/sdk/api/product/get-by-name)
 - [Deleting Product](/sdk/api/product/delete)
+
+## Related Concepts
+
+<ProductCard />
