--- a/sdk/api/test-case/create.mdx
+++ b/sdk/api/test-case/create.mdx
@@ -4,7 +4,7 @@ description: "Create a test case for your test."
 ---
 
 ## Returns
-Returns a TestCase object for the given parameters.
+Returns a [TestCase](/concepts/product/test/case) object for the given parameters.
 
 ## Example
 ```python
