--- a/sdk/api/test-case/get.mdx
+++ b/sdk/api/test-case/get.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific test case by its ID."
 ---
 
 ## Returns
-Returns a TestCase object for the given test case ID.
+Returns a [TestCase](/concepts/product/test/case) object for the given test case ID.
 
 ## Example
 ```python
