--- a/sdk/api/test-case/list.mdx
+++ b/sdk/api/test-case/list.mdx
@@ -4,7 +4,7 @@ description: "List all test cases associated with a specific test."
 ---
 
 ## Returns
-Returns a list of TestCase objects for the given test.
+Returns a list of [TestCase](/concepts/product/test/case) objects for the given test.
 
 ## Example
 ```python
