--- a/sdk/api/test-case/service.mdx
+++ b/sdk/api/test-case/service.mdx
@@ -3,6 +3,8 @@ title: 'Test Case Service'
 description: "Test Case Service API methods in the Galtea SDK"
 ---
 
+import TestCaseCard from '/snippets/cards/test-case-card.mdx';
+
 The Test Case Service in the Galtea SDK allows you to manage [test-cases](/concepts/product/test/case) for evaluating your products.
 This Service is exposed by the `galtea.test_cases` object.
 
@@ -15,3 +17,7 @@ This Service is exposed by the `galtea.test_cases` object.
 - [Listing Test Cases](/sdk/api/test-case/list)
 - [Retrieving Test Case](/sdk/api/test-case/get)
 - [Deleting Test Case](/sdk/api/test-case/delete)
+
+## Related Concepts
+
+<TestCaseCard />
