--- a/sdk/api/test/create.mdx
+++ b/sdk/api/test/create.mdx
@@ -4,7 +4,7 @@ description: "Create a test for your product."
 ---
 
 ## Returns
-Returns a Test object for the given parameters.
+Returns a [Test](/concepts/product/test) object for the given parameters.
 
 ## Example
 ```python
