--- a/sdk/api/test/get-by-name.mdx
+++ b/sdk/api/test/get-by-name.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific test by its name."
 ---
 
 ## Returns
-Returns a Test object for the given product and test name.
+Returns a [Test](/concepts/product/test) object for the given product and test name.
 
 ## Example
 ```python
