--- a/sdk/api/test/get.mdx
+++ b/sdk/api/test/get.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific test by its ID."
 ---
 
 ## Returns
-Returns a Test object for the given test ID.
+Returns a [Test](/concepts/product/test) object for the given test ID.
 
 ## Example
 ```python
