--- a/sdk/api/test/list.mdx
+++ b/sdk/api/test/list.mdx
@@ -4,7 +4,7 @@ description: "List all tests associated with a specific product."
 ---
 
 ## Returns
-Returns a list of Test objects for the given product.
+Returns a list of [Test](/concepts/product/test) objects for the given product.
 
 ## Example
 ```python
