--- a/sdk/api/test/service.mdx
+++ b/sdk/api/test/service.mdx
@@ -3,6 +3,8 @@ title: 'Test Service'
 description: "Test Service API methods in the Galtea SDK"
 ---
 
+import TestCard from '/snippets/cards/test-card.mdx';
+
 The Test Service in the Galtea SDK allows you to manage [tests](/concepts/product/test) for evaluating your products.
 This Service is exposed by the `galtea.tests` object.
 
@@ -17,3 +19,7 @@ This Service is exposed by the `galtea.tests` object.
 - [Retrieving Test By Name](/sdk/api/test/get-by-name)
 - [Deleting Test](/sdk/api/test/delete)
 - [Downloading Test](/sdk/api/test/download)
+
+## Related Concepts
+
+<TestCard />
