--- a/sdk/api/version/create.mdx
+++ b/sdk/api/version/create.mdx
@@ -4,7 +4,7 @@ description: "Create a version for your product."
 ---
 
 ## Returns
-Returns a Version object for the given parameters, or `None` if an error occurs.
+Returns a [Version](/concepts/product/version) object for the given parameters, or `None` if an error occurs.
 
 ## Example
 ```python
