--- a/sdk/api/version/get-by-name.mdx
+++ b/sdk/api/version/get-by-name.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific version by its name."
 ---
 
 ## Returns
-Returns a Version object for the given product and version name.
+Returns a [Version](/concepts/product/version) object for the given product and version name.
 
 ## Example
 ```python
