--- a/sdk/api/version/get.mdx
+++ b/sdk/api/version/get.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific version by its ID."
 ---
 
 ## Returns
-Returns a Version object for the given version ID.
+Returns a [Version](/concepts/product/version) object for the given version ID.
 
 ## Example
 ```python
