--- a/sdk/api/version/list.mdx
+++ b/sdk/api/version/list.mdx
@@ -4,7 +4,7 @@ description: "List all versions associated with a specific product."
 ---
 
 ## Returns
-Returns a list of Version objects for the given product.
+Returns a list of [Version](/concepts/product/version) objects for the given product.
 
 ## Example
 ```python
