--- a/sdk/api/version/service.mdx
+++ b/sdk/api/version/service.mdx
@@ -3,6 +3,8 @@ title: 'Version Service'
 description: "Version Service API methods in the Galtea SDK"
 ---
 
+import VersionCard from '/snippets/cards/version-card.mdx';
+
 The Version Service in the Galtea SDK allows you to manage different iterations of your [products](/concepts/product) through [versions](/concepts/product/version).
 This Service is exposed by the `galtea.versions` object.
 
@@ -16,3 +18,7 @@ This Service is exposed by the `galtea.versions` object.
 - [Retrieving Version](/sdk/api/version/get)
 - [Retrieving Version By Name](/sdk/api/version/get-by-name)
 - [Deleting Version](/sdk/api/version/delete)
+
+## Related Concepts
+
+<VersionCard />
