--- a/sdk/api/evaluation-task/get.mdx
+++ b/sdk/api/evaluation-task/get.mdx
@@ -4,7 +4,7 @@ description: "Retrieve a specific evaluation task by its ID."
 ---
 
 ## Returns
-Returns an EvaluationTask object for the given task ID.
+Returns an [EvaluationTask](/concepts/product/evaluation/task) object for the given task ID.
 
 ## Example
 ```python
