--- a/sdk/api/evaluation-task/service.mdx
+++ b/sdk/api/evaluation-task/service.mdx
@@ -3,6 +3,8 @@ title: 'Evaluation Task Service'
 description: "Evaluation Task Service API methods in the Galtea SDK"
 ---
 
+import EvaluationTaskCard from '/snippets/cards/evaluation-task-card.mdx';
+
 The Evaluation Task Service in the Galtea SDK allows you to manage [evaluation tasks](/concepts/product/evaluation/task) for assessing your products.
 This Service is exposed by the `galtea.evaluation_tasks` object.
 
@@ -16,3 +18,7 @@ This Service is exposed by the `galtea.evaluation_tasks` object.
 - [Listing Evaluation Tasks](/sdk/api/evaluation-task/list)
 - [Retrieving Evaluation Task](/sdk/api/evaluation-task/get)
 - [Deleting Evaluation Task](/sdk/api/evaluation-task/delete)
+
+## Related Concepts
+
+<EvaluationTaskCard />
