Client doubts added to documentation

--- a/concepts/product/test.mdx
+++ b/concepts/product/test.mdx
@@ -32,6 +32,10 @@ Your selection will determine whether you need to provide a *Knowledge Base File
   More information on how to create tests can be found in the [Create Quality Tests](/concepts/product/test/quality-tests) and [Create Red Teaming Tests](/concepts/product/test/red-teaming-tests) documentation.
 </Info>
 
+<Note>
+  It is important to note that the information you provide during **product onboarding**, such as the product's description and intended use, plays a valuable role when generating test cases. Galtea can leverage this metadata to generate more targeted and context-aware test cases when creating both quality and red teaming tests, leading to more effective and insightful evaluations.
+</Note>
+
 ## Test Types
 
 Galtea supports two main types of tests:
