--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -24,10 +24,25 @@ You can **create**, view and manage your metric types on the [Galtea dashboard](
 At Galtea, we use two types of metrics to evaluate large language model (LLM) outputs: **deterministic** and **non-deterministic**.
 
 - **Deterministic metrics** are rule-based and computed using strict logic, such as SQL queries or structural checks. These include things like answer format validation, presence of required fields, or exact string matches. Their results are consistent and reproducible. See more in [our example](/sdk/examples/create-evaluation-with-custom-scores).
+
+  Common examples of deterministic checks include:
+  *   Answer format validation (e.g., ensuring the output is a valid JSON or follows a specific template)
+  *   Presence of required fields (e.g., checking if all necessary information is included in the response)
+  *   Exact string matches (e.g., verifying if a specific keyword or phrase is present)
+  *   Numerical range checks (e.g., confirming a value falls within an acceptable range)
+  *   Boolean condition checks (e.g., ensuring a specific condition evaluates to true or false as expected)
+
+  <Info>
+    The platform cannot automatically evaluate *deterministic metrics*, as it lacks the necessary information. Therefore, you are responsible for uploading the evaluation results to visualize charts and data based on these metrics.
+  </Info>
+
 - **Non-deterministic metrics** are powered by the **G-Eval** evaluation framework, an LLM-as-a-judge methodology, originally introduced in the paper [“NLG Evaluation using GPT-4 with Better Human Alignment”](https://arxiv.org/abs/2303.16634). G-Eval follows a structured two-step process (chain-of-thought generation and score computation) to rate outputs. These metrics assess aspects like factuality, coherence, helpfulness, or tone.
 
-<Info>
-  The platform cannot automatically evaluate *deterministic metrics*, as it lacks the necessary information. Therefore, you are responsible for uploading the evaluation results to visualize charts and data based on these metrics.
+<Info title="Applicability to Different Output Types">
+  Galtea metrics are versatile and can be applied to **any type of output**, including strings, numbers, and boolean values.
+
+  *   **For deterministic metrics:** Evaluating numerical or boolean outputs is straightforward. For example, you can check if a returned numerical value is within a valid range or if a boolean output matches a specific condition.
+  *   **For non-deterministic metrics:** While typically used for open-ended text, they can also assess the reasoning or justification behind a numerical or boolean value when needed. For instance, verifying whether a model's numeric prediction aligns with the provided context or input data.
 </Info>
 
 ## List of metrics available in the Galtea Platform
@@ -136,6 +151,10 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
 </ResponseField>
 
 ## G-Eval
+
+<Note title="Our Evaluation Model">
+  The non-deterministic metrics, powered by LLM-as-a-judge (G-Eval), utilize models that have demonstrated the best performance in our internal benchmarks and testing. We are committed to continuously evolving and improving these evaluator models to ensure the highest quality assessments over time.
+</Note>
 
 ### Evaluation Criteria vs. Evaluation Steps
 
