--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,10 +4,12 @@ description: "The updates for Galtea"
 icon: "newspaper"
 ---
 
+import Changelog_2025_05_19 from '/snippets/changelog/2025-05-19.mdx';
 import Changelog_2025_05_12 from '/snippets/changelog/2025-05-12.mdx';
 import Changelog_2025_05_05 from '/snippets/changelog/2025-05-05.mdx';
 import Changelog_2025_04_28 from '/snippets/changelog/2025-04-28.mdx';
 
+<Changelog_2025_05_19 />
 <Changelog_2025_05_12 />
 <Changelog_2025_05_05 />
 <Changelog_2025_04_28 />
