--- a/snippets/changelog/2025-05-19.mdx
+++ b/snippets/changelog/2025-05-19.mdx
@@ -1,35 +1,34 @@
-<Update label="2025-05-19" description="Onboarding Improvements, Extended Data Generation capabilities, Dashboard Usability, and More">
+<Update label="2025-05-19" description="Platform Upgrades: Easier Onboarding, Improved UI & Finer Control">
 
-## Smoother Onboarding Experience
+## Streamlined Onboarding and Quicker Starts
 
-- **Visual Improvements**  
-  The onboarding flow has been visually enhanced for a more welcoming and intuitive start.
-- **Default Metric & Test**  
-  New users now get a default metric and test, making it easier to get started evaluating your product right away.
+We've revamped the platform onboarding! It's now more visually intuitive and to help new users get evaluating in no time, we now provide a default [Metric](/concepts/metric-type) and a default [Test](/concepts/product/test). This makes it easier than ever to get started with Galtea and run your first evaluation quickly.
 
-## Extended Data Generation Capabilities
+## Deeper Insights with Visible Conversation Turns
 
-Our data generation tools have been expanded with:
+Understanding the full context of interactions is key. You can now view the complete [conversation turns](/sdk/examples/evaluating-conversations) associated with your [test cases](/concepts/product/test/case) directly within the dashboard. This offers richer context, aiding in more thorough analysis and debugging of your conversational AI products.
 
-- **JSON Support** - Create synthetic data from `.json` knowledge base files.
+<Frame>
+    <img src="/images/changelog/2025-05-19_conversation_turns_display.png" alt="Conversation Turns Display in Dashboard" />
+</Frame>
 
-## Dashboard & Usability Upgrades
+## Dashboard Usability Boost
 
-- **Conversation Turns in Test Cases**  
-  You can now view the full conversation turns of test cases directly in the dashboard, providing better context and transparency.
-- **UI Enhancements**  
-  The dashboard interface has been refined to increase usability and streamline your workflow.
-- **Test Case Generation Control**  
-  When creating a test, you can now select the maximum number of test cases to generate, giving you more flexibility and control. This is also useful if you want to limit the amount of credits used from the platform.
-- **Creator Information Displayed**  
-  The creator of each Product, Test, Version, and more is now shown on the relevant details page, improving traceability and collaboration.
-- **Table Usability Improvements**  
-  Tables now indicate when filters are applied and include a quick action to clear all filters, making data exploration faster and easier.
+We're continually refining the Galtea experience. This update brings several UI enhancements across the dashboard, designed to improve overall usability and make your workflow smoother and more intuitive.
 
-## Bug Fixes & Improvements
+## Tailor Your Test Generation: Selectable Test Case Counts
 
-- Various UI glitches and minor errors have been addressed for a smoother experience.
+Gain more control over your testing process! When [generating tests](/sdk/api/test/create), you can now specify the exact number of [test cases](/concepts/product/test/case) you want Galtea to create. This allows you to fine-tune the scope and depth of your tests according to your needs.
 
-Enjoy these improvements, and as always, your feedback is welcome!
+## Track Your Team's Work: Creator Attribution Displayed
 
+Clarity in collaboration is important. Now, the user who created a [Product](/concepts/product), [Test](/concepts/product/test), [Version](/concepts/product/version), or other key assets will be clearly displayed on their respective details pages. This helps in tracking ownership and contributions within your team.
+
+## Enhanced Table Functionality for Easier Data Navigation
+
+Working with data tables in the dashboard is now more efficient:
+- **Clear Filter Indicators:** Easily see which filters are currently applied to any table.
+- **Quick Filter Reset:** A new "Clear All Filters" button allows you to reset your view with a single click.
+
+Enjoy these improvements and as always, we welcome your feedback!
 </Update>
