--- a/concepts/product/metrics/contextual-recall.mdx
+++ b/concepts/product/metrics/contextual-recall.mdx
@@ -29,7 +29,7 @@ The score is computed using an LLM that:
 The metric is calculated as:
 
 $$
-\text{Contextual Recall} = \frac{\text{Number of required facts present in retrieval context}}{\text{Total number of required facts}}
+\text{Contextual Recall} = \frac{\text{Number of Attributable Statements}}{\text{Total number of expressed statements}}
 $$
 
 Higher scores reflect better recall—i.e., the retriever captured all necessary supporting information.
