--- a/concepts/product/metrics/contextual-relevancy.mdx
+++ b/concepts/product/metrics/contextual-relevancy.mdx
@@ -29,7 +29,7 @@ This metric's score is computed using an LLM-as-a-judge process. The LLM judge p
 
 The formula is:
 $$
-\text{Contextual Relevancy} = \frac{\text{Number of relevant statements in retrieval_context}}{\text{Total number of statements in retrieval_context}}
+\text{Contextual Relevancy} = \frac{\text{Number of relevant statements}}{\text{Total number of statements}}
 $$
 
 A higher score indicates that the retriever is effectively sourcing information that is pertinent to the user's query.
