--- a/concepts/product/metrics/role-adherence.mdx
+++ b/concepts/product/metrics/role-adherence.mdx
@@ -41,4 +41,4 @@ Scores close to **1** indicate strong consistency with the chatbot's intended pe
 ## Related Topics
 
 - [Knowledge Retention](/concepts/product/metrics/knowledge-retention)
-- [Conversation Completeness](/concepts/product/metrics/conversation-completeness)
+- [Conversational Completeness](/concepts/product/metrics/conversational-completeness)
