--- a/snippets/changelog/2025-05-12.mdx
+++ b/snippets/changelog/2025-05-12.mdx
@@ -5,7 +5,7 @@
 You can now [evaluate conversations](/sdk/examples/monitor-production-responses-to-user-queries#evaluating-conversations) using these new metrics:
 - **Role Adherence** - Assess how well an AI stays within its defined role
 - **Knowledge Retention** - Measure how effectively information is remembered throughout a conversation
-- **Conversation Completeness** - Evaluate whether all user queries were fully addressed
+- **Conversational Completeness** - Evaluate whether all user queries were fully addressed
 - **Conversation Relevancy** - Determine if responses remain on-topic and purposeful
 
 ## Enhanced Security Framework
