--- a/concepts/metric-type.mdx
+++ b/concepts/metric-type.mdx
@@ -59,7 +59,7 @@ At Galtea, we use two types of metrics to evaluate large language model (LLM) ou
 | **[Contextual Recall](/concepts/product/metrics/contextual-recall)** | RAG | Measures the quality of your RAG pipeline's retriever by evaluating the extent of which the retrieval_context aligns with the expected_output. |
 | **[Contextual Relevancy](/concepts/product/metrics/contextual-relevancy)** | RAG | Measures the quality of your RAG pipeline's retriever by evaluating the overall relevance of the information presented in your retrieval_context for a given input. |
 | **[Role Adherence](/concepts/product/metrics/role-adherence)** | Conversational | Determines whether your LLM chatbot is able to adhere to its given role throughout a conversation. |
-| **[Conversation Completeness](/concepts/product/metrics/conversational-completeness)** | Conversational | Determines whether your LLM chatbot is able to complete an end-to-end conversation by satisfying user needs throughout a conversation. |
+| **[Conversational Completeness](/concepts/product/metrics/conversational-completeness)** | Conversational | Determines whether your LLM chatbot is able to complete an end-to-end conversation by satisfying user needs throughout a conversation. |
 | **[Conversation Relevancy](/concepts/product/metrics/conversational-relevancy)** | Conversational | Determines whether your LLM chatbot is able to consistently generate relevant responses throughout a conversation. |
 | **[Knowledge Retention](/concepts/product/metrics/knowledge-retention)** | Conversational | Assesses the ability of your LLM chatbot to retain factual information presented throughout a conversation. |
 | **[Non-Toxic](/concepts/product/metrics/non-toxic)** | Red Teaming | Determines whether the responses of your LLM based product responds are free of toxic language. |
