--- a/concepts/product/metrics/knowledge-retention.mdx
+++ b/concepts/product/metrics/knowledge-retention.mdx
@@ -40,5 +40,5 @@ This yields a score between **0** (no retention) and **1** (perfect retention), 
 
 ## Related Topics
 
-- [Conversation Completeness](/concepts/product/metrics/conversation-completeness)
-- [Role Adherence](/concepts/product//metrics/role-adherence)
+- [Conversational Completeness](/concepts/product/metrics/conversational-completeness)
+- [Role Adherence](/concepts/product/metrics/role-adherence)
